# mongodb-dump-and-restore-with-python

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
database/: mongo_operations.py
user_interaction/: selector.py
utils/: env_utils.py  file_utils.py
